# ImageSteganography

./: .gitignore  CMakeLists.txt  README.md  imageReceiver.cpp  main.cpp
